Final Change debug

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -65,7 +65,7 @@
     }
 
     .navbar {
-      background: tomato;
+      background: azure;
       border-bottom: 1px solid black;
       height: 60px;
       left: 0;
@@ -86,3 +86,7 @@
       padding: 0 10px;
       text-decoration: none;
     }
+.chatty-gif {
+    float: left;
+    max-height: 100%;
+}
